--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,13 +10,14 @@
 </head>
 <body style="background: linear-gradient(to right, #1f1c2c, #928dab)">
 
-    <!--edit text, notes section-->>
+    
     <div class="container justify-content-center align-items-center d-flex" style="height: 100vh;" >
+        
         <div class="card bg-dark" style="width: 20rem; overflow: auto; height: 20rem; ">
             <div class="card-header">
                 <h1 class="fw-bold text-center" style="color: white;" >To-DO list</h1>
             </div>
-
+<!--edit text, notes section-->
             <%for (i=0;i<ejes.length;i++){%>
                 
                 <div class="card-title  bg-light  m-1 d-flex taskcard">
@@ -32,7 +33,7 @@
                     
                     <form action="submit-edit" method="post" class="submit-edit" style="display: none;">
                         <input type="hidden" name="index" value="<%= i %>">
-                        <input type="hidden" name="text_edite" class="text_editting" value="">
+                        <input type="hidden" name="text_edite" class="text_editting" required>
                         <button type="submit"  class="bg-transparent submit submit-editbtn" style="outline: none; border: none;"><img src="/Resources/images/add.png" alt="add image" id="addimg"></button> 
 
 
@@ -45,12 +46,12 @@
 
 
 
-
+<!--text input section-->
             <div class="card-body">
                 <form action="/" method="post">
                     <div class="listInput">
-                        <input type="text" class="card-text inputField" name="InputField" placeholder="Enter the task">
-                        <button type="submit"  class="bg-transparent" style="outline: none; border: none;" ><img src="/Resources/images/add.png" alt="add image" id="addimg"></button> 
+                        <input type="text" class="card-text inputField" name="InputField" placeholder="Enter the task" required>
+                        <button type="submit"  class="bg-transparent submit-textinput" style="outline: none; border: none;" ><img src="/Resources/images/add.png" alt="add image" id="addimg"></button> 
 
                     </div>
                     
@@ -60,7 +61,6 @@
 
     </div>
 
-    <!--text Input-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     
     <script src="/Resources/script.js"></script>
