--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,8 @@
 
                     </form>
                     
-                    <form action="delete" method="post" class="delete">
-                        <input type="hidden" name="index" value="<%=ejes[i].name%>">
+                    <form class="delete-form delete" data-index="<%= ejes[i].name %>">
+                        
                         <button type="submit"  class="bg-transparent" style="outline: none; border: none;" ><img src="/Resources/images/bin (2).png" alt="" class="m-2 listimg binimg" data-index="<%= i %>"></button>
                     </form> 
                  
@@ -37,8 +37,7 @@
                     <img src="/Resources/images/pencil.png" alt="" class="m-2 listimg edit"> 
                     <label for="task" class="editable" name="TextBox" style="<% if (ejes[i].check) { %>text-decoration: line-through;<% } %>"> <%=ejes[i].name%> </label>
                     
-                    <form action="submit-edit" method="post" class="submit-edit" style="display: none;">
-                        <input type="hidden" name="oldName" value="<%=ejes[i].name%>">
+                    <form action="submit-edit" class="submit-edit edit-form" data-oldname="<%= ejes[i].name %>" style="display: none;">
                         <input type="hidden" name="newName"  value="<%=ejes[i].name%>" class="text_editting" required>
                         <button type="submit"  class="bg-transparent submit submit-editbtn" style="outline: none; border: none;"><img src="/Resources/images/add.png" alt="add image" id="addimg"></button> 
 
